--- a/index.html
+++ b/index.html
@@ -5,78 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFirstCurruculumVitae</title>
     <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Arial', sans-serif;
-    }
-    .contenedor {
-      display: flex;
-      
-      gap: 10px;
-        }
-    .columna {
-      flex: .443;
-      margin-top: 2%;
-      padding: 10px;
-      background-color: #e3e5e8;
-      border: 1px solid #e3e5e8;
-      padding-top: 10%;
-    }
-    .columna2 {
-    flex: .502;
-      padding: 10px;
-      background-color: #ffffff;
-      border: 1px solid #ffffff;
-    }
-    .columna3 {
-    flex: .055;
-      padding: 10px;
-      background-color: #233a57;
-      border: 1px solid #233a57;
-      margin-top: 2%;
-    }
-    .titulo_linea h1 {
-      text-align: right;
-      font-size:90px;
-      padding-top: 5.5%;
-      margin-bottom: -1%;  
-    }
-    .titulo_linea h2{
-      text-align: right;
-      margin-bottom: 5%;
-      font-size:35px;
-    }
-    .titulo_linea {
-      background-color: #233a57;
-      height: 37vh;
-      padding: 10px;
-      padding-right: 20%;
-      }
-    .columna h1 {
-      font-size:48.97px;
-      padding-left: 28%;
+   html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  height: 100vh;
+}
 
-    }
-    h1 {
-      color: #021d54;
-    }
-    .columna ul {
-      padding-left: 32%;
-      font-size: 25.895336px;
-      line-height: 1.8;
-    }
+.contenedor {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  max-height: 100vh;
+}
+
+.columna, .columna2, .columna3 {
+  padding: 10px;
+  height: auto;
+}
+
+.columna {
+  flex: 0.443;
+  background-color: #e3e5e8;
+  border: 1px solid #e3e5e8;
+  padding-top: 5%;
+}
+
+.columna2 {
+  flex: 0.502;
+  background-color: #ffffff;
+}
+
+.columna3 {
+  flex: 0.055;
+  background-color: #233a57;
+}
+
+.titulo_linea h1 {
+  text-align: right;
+  font-size: clamp(40px, 5vw, 90px);
+  padding-top: 5.5%;
+  margin-right: 7%;
+  margin-bottom: -1%;
+}
+
+.titulo_linea h2 {
+  text-align: right;
+  margin-bottom: 5%;
+  margin-right: 7%;
+  font-size: clamp(13.32px, 3vw, 28.97px); 
+}
+
+.titulo_linea {
+  background-color: #233a57;
+  height: auto; 
+  padding: 10px;
+  padding-right: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.columna h1 {
+  font-size: clamp(21.78px, 3vw, 48.97px);
+  color: #021d54;
+  padding-top: 10%;    
+  padding-left: 28%;/
+}
+
+.columna ul {
+  padding-left: 33%;
+  color: #021d54;
+  font-size: clamp(11.52px, 2vw, 25.90px);
+  line-height: 1.5;
+}
+
+.yo {
+  position: absolute;
+  top: 10%; 
+  left: 12%;
+  border: 13px solid white;
+  width: clamp(42px, 42vw, 420px); 
+  height: auto; 
+  max-height: 420px; 
+}
+.espacio-blanco {
+  background-color: white;
+  width: 100%;
+  height: 30px;
+}
     </style>
 </head>
 <body>
-  <img src="imag1.jpg" style="position: absolute; top: clamp(5%, 5vw, 15%); left: 12%  ; border: 13px solid white; width: clamp(5%, 25vw, 25%)">
+  <div class="imagen_Inamobible">
+  <img src="imag1.jpg" class="yo">
+  </div>
     <div class="titulo_linea">
         <h1 style="color: #ffffff;">Ramsés Villa</h1>
-        <h2 style="color: #ffffff;">Estudiante de ingeniería</h2>
+        <h2 style="color: #ffffff;">ESTUDIANTE DE INGENIERÍA</h2>
     </div>
+    <div class="espacio-blanco"></div>
     <div class="contenedor">
         <div class="columna">
-            <h1>Contacto</h1>  
+            <h1>CONTACTO</h1>  
             <ul>
               <li>777-387-7491</li>
               <li>ramisaac23@gmail.com</li>
