--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   display: flex;
   gap: 10px;
   width: 100%;
-  max-height: 100vh;
+  max-height: 200vh;
 }
 
 .columna, .columna2, .columna3 {
@@ -85,6 +85,7 @@
   background-color: #ffffff;
   padding-left: 4%;
   color: #021d54;
+  padding-bottom: 4%;
 }
 
 .columna2 h1 {
@@ -121,6 +122,11 @@
   height: 30px;
 }
 
+.espacio-blanco1 {
+  background-color: white;
+  width: 100%;
+  height: 40px;
+}
     </style>
 </head>
 <body>
@@ -151,21 +157,21 @@
         </div>
         <div class="columna2">
         <h1>MI PERFIL</h1>
-        <p>asfasfdf</p>
+        <p>Mi nombre es Isaac Ramsés Villa Álvarez, tengo 18 años, actualmente mis hobbies serian jugar en la pc, cantar y tocar algun instrumento, estoy empezando mi largo camino en la programación y estoy abierto a aprender todo lo que se venga por delante.</p>
         <h1>EXPERIENCIA</h1>
         <h2>ESTUDIANTE DE INGENIERIA</h2>
         <h3>Universidad de montemorelos</h3>
-        <p>sgsfgsdf</p>
+        <p>Como estudiante he tenido un poco de experiencia pogramando en java, una de las mas destacables es la programacion de un robot nombrado SumoBot, eso se hizo para una competicion en la EXPOFITEC.</p>
         <h2>RECEPCIONISTA</h2>
         <h3>Universidad de montemorelos</h3>
-        <p>sgsfgsdf</p>
+        <p>Actualmente estoy trabajando en la recepcion del dormitio 3, me ha ido bien y creo que puedo manejar un trabajo con responsabilidades administrativas, ademas de ser cuidadoso con el ambito monetario, ya que tambien debo de vender los productos de lo que llamamos snack.</p>
         <h2>REVISOR DE CODIGO</h2>
         <h3>Himnario Adventista</h3>
-        <p>sgsfgsdf</p>
+        <p>Fue un corto periodo pero estuve trabajando con mi primo Crysfel Villa, solo para revisar si las letras de los hmimnos del himnario adventista estaban bien, usamos un poco de Python pero nadas fuera de lo comun.</p>
         <h1>FORMACIÓN</h1>
         <h2>UNIVERSIDAD DE MONTEMORELOS</h2>
         <h3>(2024-2025)</h3>
-        <p>Estudiando ingenieria en sistemas computacionalee</p>
+        <p>Estudiando ingenieria en sistemas computacionales.</p>
         <h1>HERRAMIENTAS</h1>
         <table>
           <tr>
@@ -195,6 +201,7 @@
         </div>
         <div class="columna3"></div>
       </div>
+      <div class="espacio-blanco1"></div>
       
 </body>
 </html>
